--- a/Gerenciamento de Estoque/login.html
+++ b/Gerenciamento de Estoque/login.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>IMS Login - Gerenciamento de Estoques</title>
 </head>
-<body>
+<body id="pageLogin">
     <section >
         <div class="container-fluid">
         <div class="loginHeader">
@@ -17,16 +17,16 @@
         </div>
         <div class="loginBody">
             <form action="">
-                <div>
-                    <label class="loginInputsContainer">Usuário</label>
-                    <input type="text">
+                <div class="loginInputsContainer">
+                    <label>Usuário</label>
+                    <input type="text" placeholder="username">
                 </div>
-                <div>
-                    <label class="loginInputsContainer">Senha</label>
-                    <input type="password">
+                <div class="loginInputsContainer">
+                    <label>Senha</label>
+                    <input type="password" placeholder="password">
                 </div>
-                <div>
-                    <button>Login</button>
+                <div class="loginButtonContainer">
+                    <button>login</button>
                 </div>
             </form>
         </div>
